# lapixdl

./: .pre-commit-config.yaml  CITATION.cff  LICENCE  README.md  examples.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
lapixdl/: __main__.py  base.py  convert.py
lapixdl/commands/: converter.py  main.py
lapixdl/convert/: __init__.py  labelbox.py
lapixdl/evaluation/: __init__.py  evaluate.py  model.py  plot.py  visualize.py
lapixdl/formats/: annotation.py  labelbox.py  lapix.py  mask.py
lapixdl/import/: __init__.py  labelbox.py
testing/: utils.py
tests/: base_test.py  conftest.py  convert_test.py  utils.py
tests/commands/: conftest.py  converter_test.py  main_test.py
tests/convert/: coco_expect.json  coco_expect_filtered.json  labelbox_test.json  labelbox_test.py  test_labelbox.py
tests/evaluation/evaluate/: bbox_test.py  calculate_pairwise_bbox_ious_test.py  evaluate_classification_test.py  evaluate_detection_test.py  evaluate_segmentation_test.py  test_calculate_pairwise_bbox_ious.py  test_evaluate_classification.py  test_evaluate_detection.py  test_evaluate_segmentation.py
tests/evaluation/model/: BinaryClassificationMetrics_test.py  BinaryDetectionMetrics_test.py  ClassificationMetrics_test.py  test_BinaryClassificationMetrics.py  test_BinaryDetectionMetrics.py  test_ClassificationMetrics.py
tests/formats/: annotation_test.py  labelbox_test.py  lapix_test.py  mask_test.py
