[metadata]
name = lapixdl
version = 0.8.11
description = Utils for Computer Vision Deep Learning research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lapix-ufsc/lapixdl
author = LAPiX
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    numpy
    pandas
    tqdm
    seaborn
    pandas
    matplotlib

python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    data*