[metadata]
name = lapixdl
version = 0.8.11
description = Utils for Computer Vision Deep Learning research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lapix-ufsc/lapixdl
author = LAPiX
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    pandas
    seaborn
    tqdm
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
