[metadata]
name = lapixdl
version = 0.9.1
description = Utils for Computer Vision Deep Learning research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lapix-ufsc/lapixdl
author = LAPiX
license = MIT
license_files = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    pandas
    pillow
    pyarrow
    seaborn
    shapely
    tqdm
    typing-extensions
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    lapixdl = lapixdl.commands.main:main

[flake8]
max-line-length = 128

[mypy]
plugins = numpy.typing.mypy_plugin
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
